# pakeles

./: Cargo.toml  README.md  build.rs  dev.sh
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  flow-dissector-goldens.yml
docs/superpowers/plans/: 2026-07-19-flow-dissector-rung0.md  2026-07-19-slice1-spine.md  2026-07-19-slice2-oracle-factory.md  2026-07-19-slice4-datapath.md  2026-07-20-flow-dissector-rung2.md  2026-07-21-flow-dissector-rung3.md  2026-07-21-symex-symbolic-layout.md
docs/superpowers/specs/: 2026-07-19-linux-flow-dissector-design.md  2026-07-19-slice1-decisions.md  2026-07-19-slice2-design.md  2026-07-19-slice4-design.md  2026-07-20-flow-dissector-rung1-design.md
examples/eth_ipv4_tcp/: README.md  parser.p4
examples/eth_ipvx_l4/: README.md  eth_ipvx_l4.ir.json
examples/linux_flow_dissector/: README.md  linux_flow_dissector.ir.json  linux_flow_dissector.py
py/: README.md
py/src/pakeles/: _build.py  (+4 more)
py/tests/: conftest.py  test_conformance.py  test_header.py  test_instance.py  test_parser.py  test_var_bytes_expr.py  test_var_bytes_instance_rebind.py
scripts/: gen-examples.sh
src/: builder.rs  cli.rs  docgen.rs  examples.rs  fixtures.rs  lib.rs  main.rs  pcapio.rs  testvec.rs  viz.rs
src/codegen/: c.rs  lua.rs  mod.rs  p4.rs
src/interp/: bits.rs  eval.rs  mod.rs
src/ir/: mod.rs  validate.rs
src/oracle/: bmv2.rs  flow_dissector.rs  mod.rs
src/snapshots/: pakeles__examples__tests__example_json_snapshot.snap
src/symex/: cov.rs  engine.rs  lint.rs  mod.rs  pathid.rs  solver.rs  testgen.rs  z3solver.rs
testdata/: basic.pcap
(+14 files in other folders)
