[package]
name = "pakeles"
version = "0.1.0"
edition = "2021"
default-run = "pakeles"

[dependencies]
prost = "0.13"
pbjson = "0.7"
pbjson-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
pcap-parser = "0.16"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }

[build-dependencies]
prost-build = "0.13"
pbjson-build = "0.7"
