[package]
name = "pakeles"
version = "0.1.0"
edition = "2021"
default-run = "pakeles"
description = "A serializable IR for wire-format parsers — one description, many provably-agreeing artifacts"
license = "Apache-2.0"
repository = "https://github.com/qobilidop/pakeles"
readme = "README.md"
keywords = ["parser", "packet", "network", "ir", "wireshark"]
categories = ["parsing", "network-programming"]
include = ["src/**", "proto/**", "build.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
prost = "0.13"
pbjson = "0.7"
pbjson-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
pcap-parser = "0.16"
clap = { version = "4", features = ["derive"] }
z3 = { version = "0.12", optional = true }

[features]
default = ["symex"]
symex = ["dep:z3"]

[[bin]]
name = "gen_examples"
required-features = ["symex"]

[dev-dependencies]
rbpf = "0.2"

[build-dependencies]
prost-build = "0.13"
pbjson-build = "0.7"
